Fix somethings - Modified the Footer labels - Use `history` correctly - Make logo on `Header` be a `Link` - Set the `overflow: hidden` property to body

--- a/app/stylus/components/footer.styl
+++ b/app/stylus/components/footer.styl
@@ -8,13 +8,11 @@ $Footer-button-color = #fff;
 .Footer {
   display flex
   justify-content center
-  // background-image linear-gradient( alpha($Footer-bgColor, 0.5), alpha($Footer-bgColor, 0.5) )
   background-color $Footer-bgColor
   width 100%
   height 9vh
-  // position fixed
-  // bottom 0
-  // left 0
+  position relative
+  z-index 3
 }
 
 .Footer-button {
